desktop/core/src/desktop/js/apps/storageBrowser/StorageBrowserPage/StorageBrowserTable/StorageBrowserTable.scss
// Licensed to Cloudera, Inc. under one
// or more contributor license agreements.  See the NOTICE file
// distributed with this work for additional information
// regarding copyright ownership.  Cloudera, Inc. licenses this file
// to you under the Apache License, Version 2.0 (the
// "License"); you may not use this file except in compliance
// with the License.  You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
@use 'variables' as vars;
@use 'mixins';

$cell-height: 40px;
$table-placeholder-height: 100px;
$action-dropdown-width: 214px;
$icon-margin: 5px;

.antd.cuix {
  .hue-storage-browser__actions-bar {
    display: flex;
    margin: vars.$fluidx-spacing-s;
    justify-content: space-between;
  }

  .hue-storage-browser__search {
    width: 30%;
  }

  .hue-storage-browser__actions-bar-right {
    display: flex;
    gap: vars.$fluidx-spacing-xs;

    .cdp-icon-dropdown {
      margin-left: $icon-margin;
    }
  }

  .hue-storage-browser__table {
    margin: 0 vars.$fluidx-spacing-s;

    .ant-table-placeholder {
      height: $table-placeholder-height;
      text-align: center;
    }

    th.ant-table-cell {
      height: $cell-height;
      background-color: vars.$fluidx-gray-040;
    }
  }

  .hue-storage-browser__table-cell-icon {
    color: vars.$fluidx-blue-700;
    margin-right: 6px;
  }

  .hue-storage-browser__table-row {
    td.ant-table-cell {
      height: $cell-height;
      @include mixins.nowrap-ellipsis;
    }
  }

  .hue-storage-browser__table-cell-name {
    color: vars.$fluidx-blue-700;
  }

  .hue-storage-browser__table-column-header {
    display: flex;
  }

  .hue-storage-browser__table-column-title {
    text-transform: capitalize;
  }
}

.hue-storage-browser__actions-dropdown {
  width: $action-dropdown-width;
  @include mixins.hue-svg-icon__d3-conflict;
}

